--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/helper-compilation-targets": "^7.25.2",
     "@craco/craco": "^7.1.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,6 +11,7 @@
     "@types/node": "^16.18.106",
     "antd": "^5.20.3",
     "axios": "^1.7.5",
+    "craco-antd": "^2.0.0",
     "my-react-app": "link:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -20,9 +22,9 @@
     "zustand": "^4.5.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -44,14 +46,12 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
+    "babel-preset-react-app": "^10.0.1",
+    "gensync": "1.0.0-beta.2",
     "typescript": "^4.9.5"
-  },
-  "jest": {
-    "setupFilesAfterEnv": [
-      "./src/setupTests.ts"
-    ]
   }
 }
