--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "antd": "^5.20.3",
     "axios": "^1.7.5",
     "craco-antd": "^2.0.0",
+    "immer": "^10.1.1",
+    "localforage": "^1.10.0",
     "my-react-app": "link:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
