--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/react-dom": "^18.3.0",
     "babel-preset-react-app": "^10.0.1",
     "gensync": "1.0.0-beta.2",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "webpack-bundle-analyzer": "^4.10.2"
   }
 }
