--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "my-react-app": "link:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
     "use-immer": "^0.10.0",
     "web-vitals": "^2.1.4",
     "zustand": "^4.5.5"
