--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "immer": "^10.1.1",
     "localforage": "^1.10.0",
     "my-react-app": "link:",
+    "nanoid": "^5.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
