文字超出显示...,全局Tip实现

--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.17.12",
     "@types/node": "^16.18.106",
+    "ahooks": "^3.8.1",
     "antd": "^5.20.3",
     "axios": "^1.7.5",
     "craco-antd": "^2.0.0",
+    "faker": "^6.6.6",
     "immer": "^10.1.1",
     "localforage": "^1.10.0",
+    "lodash": "^4.17.21",
     "my-react-app": "link:",
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
