可编辑大数据表格Handsontable

--- a/package.json
+++ b/package.json
@@ -5,16 +5,22 @@
   "dependencies": {
     "@babel/helper-compilation-targets": "^7.25.2",
     "@craco/craco": "^7.1.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.6",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/lodash": "^4.17.12",
     "@types/node": "^16.18.106",
+    "ag-grid-community": "^32.3.2",
+    "ag-grid-react": "^32.3.2",
     "ahooks": "^3.8.1",
     "antd": "^5.20.3",
     "axios": "^1.7.5",
     "craco-antd": "^2.0.0",
     "faker": "^6.6.6",
+    "handsontable": "^14.6.1",
     "immer": "^10.1.1",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
@@ -25,8 +31,11 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-virtualized-auto-sizer": "^1.0.24",
+    "react-window": "^1.8.10",
     "redux": "^5.0.1",
     "use-immer": "^0.10.0",
+    "virtuallist-antd": "0.8.0-beta.1",
     "web-vitals": "^2.1.4",
     "zustand": "^4.5.5"
   },
@@ -59,6 +68,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
+    "@types/react-window": "^1.8.8",
     "babel-preset-react-app": "^10.0.1",
     "gensync": "1.0.0-beta.2",
     "typescript": "^4.9.5",
