--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "@craco/craco": "^7.1.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@handsontable/react": "^14.6.1",
+    "@handsontable/react": "10.0.0",
     "@mui/material": "^6.1.6",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/handsontable": "^0.35.0",
     "@types/jest": "^27.5.2",
     "@types/lodash": "^4.17.12",
     "@types/node": "^16.18.106",
@@ -22,7 +21,8 @@
     "axios": "^1.7.5",
     "craco-antd": "^2.0.0",
     "faker": "^6.6.6",
-    "handsontable": "^14.6.1",
+    "fin-hypergrid": "^3.3.2",
+    "handsontable": "10.0.0",
     "immer": "^10.1.1",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
