--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@types/react-window": "^1.8.8",
     "babel-preset-react-app": "^10.0.1",
     "gensync": "1.0.0-beta.2",
+    "sass": "^1.86.0",
     "typescript": "^4.9.5",
     "webpack-bundle-analyzer": "^4.10.2"
   }
